Change Log
----------
  V0.41
  
  - Fixes:
  
  
  - New Features:
    - Removed getEditableData() bodge from bitmap classes; all interaction with
      bitmap data happens through bitmap methods.
    - SDL framebuffer code merged into FrameBuffer class.
    - Added label test.
    - Added button test.
    - Added DOS batch files to build examples and tests.


  V0.40 (20091115)
  
  - First alpha release.
  
  - Fixes:
    - PALib support removed.
    - Pointer to selected day button in calendar resets to NULL when new month
      selected; prevents day button incorrectly popping up if same button is
      clicked in new month.
    - Calendar::getPreferredSize() returns valid values.
    - Label text is greyed out when disabled.
    - Huge speed increase in Calendar::resize().
    - Calendar's child controls correctly fill entire available space.
    - Calendar correctly selects date if new day is the same as old day but in
      a different month.
    - Gadget drag event only raised if stylus is actually moved whilst dragging
      mode active.
    - ScrollingPanel drag and scroll events only raised if stylus is actually
      moved whilst dragging mode active.
    - MultiLineTextBox greys out text when disabled.
    - MultiLineTextBox::removeText() correctly repositions cursor.
    - TextBox greys out text when disabled.
    - Scrolltest compiles correctly.
    - SimpleScreen and SimpleWindow helper gadgets removed.
    - Renamed LinkedList to WoopsiLinkedList and LinkedListIterator to
      WoopsiLinkedListIterator to avoid type clashing with LinkedList in devkit.
    - Tidied up woopsifuncs.h.
    - SuperBitmap::getBitmap() returns a pointer to the Bitmap object instead of
      the Bitmap object's raw pixel data.
    - Moved skinned gadgets out of main library and into bonus folder.
    - Removed fatInitDefault() stub method for SDL out of individual .cpp files
      and into nds.h.
    - dimmedscreen.h includes woopsi.h.